kubernetes/apps/observability/blackbox-exporter/lan/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter-lan-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: prometheus-blackbox-exporter
        app.kubernetes.io/instance: blackbox-exporter-lan
    egress:
      - toFQDNs:
          - matchName: nas.internal
        toPorts:
          - ports:
              - port: "2049"
      - toCIDRSet:
          - cidr: 192.168.2.0/24
          - cidr: 192.168.3.0/24
          - cidr: 192.168.42.0/24
        icmps:
          - fields:
              - family: IPv4
                type: 8
              - family: IPv4
                type: 0
      - toCIDRSet:
          - cidr: 192.168.2.0/24
          - cidr: 192.168.42.0/24
        toPorts:
          - ports:
              - port: "443"
